Fix "vh" on iOS

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -749,8 +749,9 @@
   }
 
   header #mobile-logo {
-    margin-top: 40px;
-    margin-left: 30px;
+    top: 40px;
+    left: 30px;
+    position: absolute;
   }
 
   header #nav-items {
